@@ -1,3 +1,9 @@
+2002-05-21  Anders Carlsson  <andersca@gnu.org>
+
+	* src/file-manager/fm-directory-view.c: (finish_loading):
+	Schedule an idle instead of a timeout when we know all the 
+	files in the directory.
+	
 === nautilus 1.1.17 ===
  
 2002-05-20  Alex Larsson  <alexl@redhat.com>
